--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Cafe Brauer",
-                    "description": "words",
+                    "description": "Where we’ll be getting married 👫 \n 2021 N Stockton Dr, Chicago, IL 60614",
                     "icon": "toilet"
                 }
             }, {
