--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Cafe Brauer",
-                    "description": "Where we’ll be getting married 👫 \n 2021 N Stockton Dr, Chicago, IL 60614",
-                    "icon": "toilet"
+                    "description": "Where we’ll be getting married 👫",
+                    "icon": "toilet",
+                    "color": 1
                 }
             }, {
                 "type": "Feature",
@@ -48,7 +49,9 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "AC Hotel",
-                    "icon": "embassy"
+                    "description": "Where many of the guests will be staying",
+                    "icon": "embassy",
+                    "color": 1
                 }
             }, {
                 "type": "Feature",
@@ -58,7 +61,9 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Watershed",
-                    "icon": "bar"
+                    "description": "A speakeasy with some delicious whiskey cocktails",
+                    "icon": "bar",
+                    "color": 1
                 }
             }, {
                 "type": "Feature",
@@ -68,7 +73,9 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Lakeshore Path Entrance",
-                    "icon": "swimming"
+                    "description": "Great for running or just checking out the lake",
+                    "icon": "swimming",
+                    "color": 1
                 }
             },{
                 "type": "Feature",
@@ -78,7 +85,9 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "MCA",
-                    "icon": "museum"
+                    "description": " The Museum of Contemporary Art is not as well known as the Art Institute of Chicago, but nevertheless offers an artsy escape from the bustle of the city",
+                    "icon": "museum",
+                    "color": 1
                 }
             },{
                 "type": "Feature",
@@ -88,7 +97,9 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Cindy's Rooftop Bar",
-                    "icon": "bar"
+                    "icon": "bar",
+                    "description": " A rooftop bar at the top of the Chicago Athletic Association — delicious drinks and gorgeous views of Millennium Park",
+                    "color": 1
                 }
             },  {
                 "type": "Feature",
@@ -98,7 +109,21 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Asado Coffee",
-                    "icon": "cafe"
+                    "description": "If you like like delicious coffee, be sure to check out Asado (Bowtruss and Intelligentsia are also delicious options in the area) ",
+                    "icon": "cafe",
+                    "color": 0
+                }
+            },  {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.630881, 41.890717]
+                },
+                "properties": {
+                    "title": "Xoco",
+                    "description": "A relatively inexpensive lunch spot with great tortas and other Mexican-influenced fare",
+                    "icon": "fast-food",
+                    "color": 0
                 }
             }]
         }
@@ -114,6 +139,15 @@ map.on('load', function () {
             "text-font": ["Open Sans Semibold", "Arial Unicode MS Bold"],
             "text-offset": [0, 0.6],
             "text-anchor": "top"
+        },
+        "paint": {
+          'text-color': {
+            property: 'color',
+            stops: [
+                [ 0 , 'green'],
+                [ 1 , 'navy']
+            ]
+          }
         }
     });
 });
@@ -140,7 +174,7 @@ map.on('click', function (e) {
 // Use the same approach as above to indicate that the symbols are clickable
 // by changing the cursor style to 'pointer'.
 map.on('mousemove', function (e) {
-    var features = map.queryRenderedFeatures(e.point, { layers: ['places'] });
+    var features = map.queryRenderedFeatures(e.point, { layers: ['points'] });
     map.getCanvas().style.cursor = (features.length) ? 'pointer' : '';
 });
 
