--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Cafe Brauer",
-                    "description": "Where we’ll be getting married 👫.",
+                    "description": "Where we’ll be getting married 👫. \
+                      <a target='_blank' href='https://goo.gl/maps/QSsJz3aHVAL2' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "toilet",
                     "color": 1
                 }
@@ -50,7 +51,8 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "AC Hotel",
-                    "description": "Where many of the guests will be staying.",
+                    "description": "Where many of the guests will be staying. \
+                      <a target='_blank' href='https://goo.gl/maps/BT9iTpuzLQL2' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "embassy",
                     "color": 1
                 }
@@ -62,7 +64,8 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Watershed",
-                    "description": "A speakeasy with some delicious whiskey cocktails.",
+                    "description": "A speakeasy with some delicious whiskey cocktails. \
+                      <a target='_blank' href='https://goo.gl/maps/MUPF3TJtQAM2' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "bar",
                     "color": 1
                 }
@@ -74,7 +77,8 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Lakeshore Path Entrance",
-                    "description": "Great for running or just checking out the lake.",
+                    "description": "Great for running or just checking out the lake. \
+                      <a target='_blank' href='https://goo.gl/maps/kTZEuJhM3P22' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "swimming",
                     "color": 1
                 }
@@ -86,7 +90,8 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "MCA",
-                    "description": " The Museum of Contemporary Art is not as well known as the Art Institute of Chicago, but nevertheless offers an artsy escape from the bustle of the city.",
+                    "description": " The Museum of Contemporary Art is not as well known as the Art Institute of Chicago, but nevertheless offers an artsy escape from the bustle of the city. \
+                      <a target='_blank' href='https://goo.gl/maps/3BHzLoqMr9k' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "museum",
                     "color": 1
                 }
@@ -99,7 +104,8 @@ map.on('load', function () {
                 "properties": {
                     "title": "Cindy's Rooftop Bar",
                     "icon": "bar",
-                    "description": " A rooftop bar at the top of the Chicago Athletic Association — delicious drinks and gorgeous views of Millennium Park.",
+                    "description": " A rooftop bar at the top of the Chicago Athletic Association — delicious drinks and gorgeous views of Millennium Park. \
+                      <a target='_blank' href='https://goo.gl/maps/bPGhanUDxgF2' data-toggle='modal'>View in Google Maps</a>",
                     "color": 1
                 }
             },  {
@@ -110,7 +116,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Asado Coffee",
-                    "description": "If you like like delicious coffee, be sure to check out Asado (Bowtruss and Intelligentsia are also delicious options in the area).\n\n \
+                    "description": "If you like like delicious coffee, be sure to check out Asado (Bowtruss and Intelligentsia are also delicious options in the area). \
                       <a target='_blank' href='https://goo.gl/maps/XKhW9ESHiQy' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "cafe",
                     "color": 0
@@ -122,8 +128,9 @@ map.on('load', function () {
                     "coordinates": [-87.630881, 41.890717]
                 },
                 "properties": {
-                    "title": "Xoco",
-                    "description": "A relatively inexpensive lunch spot with great tortas and other Mexican-influenced fare.",
+                    "title": "XOCO",
+                    "description": "A relatively inexpensive lunch spot with great tortas and other Mexican-influenced fare. \
+                      <a target='_blank' href='https://goo.gl/maps/SjuQH6c1nzj' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "fast-food",
                     "color": 0
                 }
@@ -135,7 +142,8 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Pizzeria Due",
-                    "description": "Both Pizzeria Due (and the original Pizzeria Uno) are sooooo much better than their airport/chain counterparts.  Due's tends to have less of a line, but both are delicious examples of a Chicago-style slice🍕.",
+                    "description": "Both Pizzeria Due (and the original Pizzeria Uno) are sooooo much better than their airport/chain counterparts.  Due's tends to have less of a line, but both are delicious examples of a Chicago-style slice🍕. \
+                      <a target='_blank' href='https://goo.gl/maps/K66anfeQBRJ2' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "fast-food",
                     "color": 0
                 }
@@ -147,7 +155,8 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Do-Rite Donuts",
-                    "description": "People say the Donut Vault is the best donut in Chicago, but dollars for donuts, Do-Rite takes the cake 🍩",
+                    "description": "People say the Donut Vault is the best donut in Chicago, but dollars for donuts, Do-Rite takes the cake 🍩 \
+                      <a target='_blank' href='https://goo.gl/maps/wefYvcPfKwz' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "ice-cream",
                     "color": 0
                 }
@@ -159,7 +168,8 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Chicago Riverwalk",
-                    "description": "The river itself may leave a bit to be desired, but the Chicago Riverwalk offers a different perspective on the skyline and the city. A nice respite in the middle of the city.",
+                    "description": "The river itself may leave a bit to be desired, but the Chicago Riverwalk offers a different perspective on the skyline and the city. A nice respite in the middle of the city. \
+                      <a target='_blank' href='https://goo.gl/maps/dRguWZ1FVEm' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "entrance",
                     "color": 0
                 }
