Adds J. Parker, updates favicon

--- a/index.html
+++ b/index.html
@@ -173,6 +173,19 @@ map.on('load', function () {
                     "icon": "entrance",
                     "color": 0
                 }
+            },  {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.634607, 41.915268]
+                },
+                "properties": {
+                    "title": "J. Parker",
+                    "description": "Like Cindy's, a rooftop bar with a view.  Overlook Lincoln Park and check out the skyline from the north-side.\
+                      <a target='_blank' href='https://goo.gl/maps/oUTneFtCpTQ2' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "bar",
+                    "color": 0
+                }
             }
           ]
         }
