Adds more places

--- a/index.html
+++ b/index.html
@@ -186,7 +186,176 @@ map.on('load', function () {
                     "icon": "bar",
                     "color": 0
                 }
-            }
+            },  {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [ -87.683364, 41.914228,]
+                },
+                "properties": {
+                    "title": "The 606",
+                    "description": "Here's the eastern entrance to the 606.  Like the High Line in New York City, a raised trail that cuts through some of the city's north-side neighborhoods.\
+                      <a target='_blank' href='https://goo.gl/maps/MiXXc6D4Gtm' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "entrance",
+                    "color": 0
+                }
+            },  {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [ -87.683364, 41.914228]
+                },
+                "properties": {
+                    "title": "Billy Sunday",
+                    "description": "Great cocktail bar the sits in Logan Square proper.\
+                      <a target='_blank' href='https://goo.gl/maps/A1SdMNyFEom' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "bar",
+                    "color": 0
+                }
+            },  {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.697099, 41.919192]
+                },
+                "properties": {
+                    "title": "Bang Bang Pie",
+                    "description": "All of their pie is good, but their seasonal fruit pies tend to be the best.\
+                      <a target='_blank' href='https://goo.gl/maps/hXdtDK4eCct' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "ice-cream",
+                    "color": 0
+                }
+            },  {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.697780, 41.923342]
+                },
+                "properties": {
+                    "title": "Cafe Mustache",
+                    "description": "Full disclosure: the staff here do not care about you.  But what Cafe Mustache lacks in hospitality they make up with good coffee and food. The avocado wrap as a salad is a favorite.\
+                      <a target='_blank' href='https://goo.gl/maps/S6Jh9wPavFt' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "cafe",
+                    "color": 0
+                }
+            }, {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.691684, 41.919626]
+                },
+                "properties": {
+                    "title": "Wasabi",
+                    "description": "Here lies the best ramen in Chicago (out of the 5 or so places that Jenna and I have tried)Here lies the best ramen in Chicago (out of the 5 or so places that Jenna and I have tried)Here lies the best ramen in Chicago (out of the 5 or so places that Jenna and I have tried).\
+                      <a target='_blank' href='https://goo.gl/maps/a3m3QkGbZQG2' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "fast-food",
+                    "color": 0
+                }
+            },  {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.648030, 41.911739]
+                },
+                "properties": {
+                    "title": "Dawali",
+                    "description": "Dawali has delicious mediterranean dishes — and is super affordable. \
+                      <a target='_blank' href='https://goo.gl/maps/BZGc2paeUH82' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "fast-food",
+                    "color": 0
+                }
+            }, {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.623735, 41.879616]
+                },
+                "properties": {
+                    "title": "The Art Institue of Chicago",
+                    "description": "This is on the every list of things to do in Chicago for a good reason — it is a feast for the eyes.  Be sure to check out the modern wing. \
+                      <a target='_blank' href='https://goo.gl/maps/9p9huHPiQiS2' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "museum",
+                    "color": 0
+                }
+            }, {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.623347, 41.882538]
+                },
+                "properties": {
+                    "title": "The Bean",
+                    "description": "Cloud Gate (aka the Bean).  Yes it's cheesy.  Yes there will be tons of tourists there.  But its still pretty fun anyway.  Be sure to check out the rest of Millennium and Maggie Daley Park while you're there.\
+                      <a target='_blank' href='https://goo.gl/maps/cdJR9dB3N2K2' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "circle-stroked",
+                    "color": 0
+                }
+            },  {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.706773, 41.927716]
+                },
+                "properties": {
+                    "title": "Lula Cafe",
+                    "description": "Cloud Gate (aka the Bean).  Yes it's cheesy.  Yes there will be tons of tourists there.  But its still pretty fun anyway.  Be sure to check out the rest of Millennium and Maggie Daley Park while you're there.\
+                      <a target='_blank' href='https://goo.gl/maps/cdJR9dB3N2K2' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "fast-food",
+                    "color": 0
+                }
+            },  {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.706773, 41.927716]
+                },
+                "properties": {
+                    "title": "Lula Cafe",
+                    "description": "Cloud Gate (aka the Bean).  Yes it's cheesy.  Yes there will be tons of tourists there.  But its still pretty fun anyway.  Be sure to check out the rest of Millennium and Maggie Daley Park while you're there.\
+                      <a target='_blank' href='https://goo.gl/maps/cdJR9dB3N2K2' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "fast-food",
+                    "color": 0
+                }
+            }, {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.711531, 41.931254]
+                },
+                "properties": {
+                    "title": "Hopewell Brewing Company",
+                    "description": "Opening in 2016, Hopewell Brewing Company makes a great addition to the Chicago craft beer scene alongside Lumarie favorites Revolution Brewing and DryHop Brewers. Clean and modern on the inside — always a good time.\
+                      <a target='_blank' href='https://goo.gl/maps/y91ZE9DxrEN2' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "beer",
+                    "color": 0
+                }
+            }, {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.701331, 41.917645]
+                },
+                "properties": {
+                    "title": "Parson's Chicken and Fish",
+                    "description": "A hipster spot if there ever was one.  Parson's is known for its amazing patio and it's craft cocktail slushies (the Frozen Negroni is so much better than your expectations).\
+                      <a target='_blank' href='https://goo.gl/maps/4hGFi61rGhS2' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "beer",
+                    "color": 0
+                }
+            }, {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.636540, 41.916870]
+                },
+                "properties": {
+                    "title": "Bricks Pizza",
+                    "description": "If you haven't heard, Chicago isn't known for thin-crust pizza.  That doesn't mean there aren't amazing thin-crust options like Bricks. Satiate your thin-crust cravings here! \
+                      <a target='_blank' href='https://goo.gl/maps/a83Bt6MS1hx' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "fast-food",
+                    "color": 0
+                }
+            },
           ]
         }
     });
