--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Wasabi",
-                    "description": "Here lies the best ramen in Chicago (out of the 5 or so places that Jenna and I have tried)Here lies the best ramen in Chicago (out of the 5 or so places that Jenna and I have tried)Here lies the best ramen in Chicago (out of the 5 or so places that Jenna and I have tried).\
+                    "description": "Here lies the best ramen in Chicago (out of the 5 or so places that Jenna and I have tried).\
                       <a target='_blank' href='https://goo.gl/maps/a3m3QkGbZQG2' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "fast-food",
                     "color": 0
@@ -298,25 +298,12 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Lula Cafe",
-                    "description": "Cloud Gate (aka the Bean).  Yes it's cheesy.  Yes there will be tons of tourists there.  But its still pretty fun anyway.  Be sure to check out the rest of Millennium and Maggie Daley Park while you're there.\
+                    "description": "If we could only tell people to go to one restaurant in Chicago and guarantee that they had a good meal, we'd tell them to go to Lula's. Consistently a great meal at a fair price. \
                       <a target='_blank' href='https://goo.gl/maps/cdJR9dB3N2K2' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "fast-food",
                     "color": 0
                 }
             },  {
-                "type": "Feature",
-                "geometry": {
-                    "type": "Point",
-                    "coordinates": [-87.706773, 41.927716]
-                },
-                "properties": {
-                    "title": "Lula Cafe",
-                    "description": "Cloud Gate (aka the Bean).  Yes it's cheesy.  Yes there will be tons of tourists there.  But its still pretty fun anyway.  Be sure to check out the rest of Millennium and Maggie Daley Park while you're there.\
-                      <a target='_blank' href='https://goo.gl/maps/cdJR9dB3N2K2' data-toggle='modal'>View in Google Maps</a>",
-                    "icon": "fast-food",
-                    "color": 0
-                }
-            }, {
                 "type": "Feature",
                 "geometry": {
                     "type": "Point",
