--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Asado Coffee",
-                    "description": "If you like like delicious coffee, be sure to check out Asado (Bowtruss and Intelligentsia are also delicious options in the area). \
+                    "description": "If you like like coffee, be sure to check out Asado (Bowtruss and Intelligentsia are also delicious options in the area). \
                       <a target='_blank' href='https://goo.gl/maps/XKhW9ESHiQy' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "cafe",
                     "color": 0
@@ -233,7 +233,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "Cafe Mustache",
-                    "description": "Full disclosure: the staff here do not care about you.  But what Cafe Mustache lacks in hospitality they make up with good coffee and food. The avocado wrap as a salad is a favorite.\
+                    "description": "Full disclosure: the staff here does not care about you.  But what Cafe Mustache lacks in hospitality they make up with good coffee and food. The avocado wrap as a salad is a favorite.\
                       <a target='_blank' href='https://goo.gl/maps/S6Jh9wPavFt' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "cafe",
                     "color": 0
@@ -339,6 +339,19 @@ map.on('load', function () {
                     "title": "Bricks Pizza",
                     "description": "If you haven't heard, Chicago isn't known for thin-crust pizza.  That doesn't mean there aren't amazing thin-crust options like Bricks. Satiate your thin-crust cravings here! \
                       <a target='_blank' href='https://goo.gl/maps/a83Bt6MS1hx' data-toggle='modal'>View in Google Maps</a>",
+                    "icon": "fast-food",
+                    "color": 0
+                }
+            }, {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-87.627532,41.892294]
+                },
+                "properties": {
+                    "title": "The Berkshire Room",
+                    "description": "A fancy bar with knock-out cocktails that's quiet enough for conversation. Go with one of their barrel infused cocktails (or if you want something more bespoke, check out dealer's choice.)  \
+                      <a target='_blank' href='https://goo.gl/maps/Erug4uKKtvj' data-toggle='modal'>View in Google Maps</a>",
                     "icon": "fast-food",
                     "color": 0
                 }
